--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "notepad_app",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
-    "bootstrap": "4.3.1",
+    "bootstrap": "^5.0.0-beta3",
     "jquery": "^3.6.0",
+    "popper": "^1.0.1",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0"
   },
